@@ -184,36 +184,36 @@ const char *macRomanEncoding[256] = {
   "trademark",
   "acute",
   "dieresis",
-  NULL,
+  "notequal",
   "AE",
   "Oslash",
-  NULL,
+  "infinity",
   "plusminus",
-  NULL,
-  NULL,
+  "lessequal",
+  "greaterequal",
   "yen",
   "mu",
-  NULL,
-  NULL,
-  NULL,
-  NULL,
-  NULL,
+  "partialdiff",
+  "summation",
+  "product",
+  "pi",
+  "integral",
   "ordfeminine",
   "ordmasculine",
-  NULL,
+  "Omega",
   "ae",
   "oslash",
   "questiondown",
   "exclamdown",
   "logicalnot",
-  NULL,
+  "radical",
   "florin",
-  NULL,
-  NULL,
+  "approxequal",
+  "Delta",
   "guillemotleft",
   "guillemotright",
   "ellipsis",
-  "space",
+  "nobreakspace",
   "Agrave",
   "Atilde",
   "Otilde",
@@ -226,7 +226,7 @@ const char *macRomanEncoding[256] = {
   "quoteleft",
   "quoteright",
   "divide",
-  NULL,
+  "lozenge",
   "ydieresis",
   "Ydieresis",
   "fraction",
@@ -251,7 +251,7 @@ const char *macRomanEncoding[256] = {
   "Igrave",
   "Oacute",
   "Ocircumflex",
-  NULL,
+  "apple",
   "Ograve",
   "Uacute",
   "Ucircumflex",
